--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-flask
-python-dotenv
-pyodbc
-pandas
-streamlit
-matplotlib
-datetime
+flask==3.03
+pyodbc==5.1.0
+pandas==2.2.2
+dash==2.17.1
+plotly==5.22.0
+dash-bootstrap-components==1.6.0
+joblib==1.4.2
