--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
+streamlit
 flask==3.0.3
 pyodbc==5.1.0
 pandas==2.2.2
-dash==2.17.1
 plotly==5.22.0
-dash-bootstrap-components==1.6.0
 joblib==1.4.2
 gunicorn==20.1.0
-xgboost
+xgboost==2.0.3
